# trustgate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  questionnaire.html
.github/workflows/: ci.yml  docs.yml
advanced-examples/rag-agent/: README.md  agent.py  calibration_labels.json  questions.csv  questions_hard.csv  trustgate.yaml
advanced-examples/rag-agent/knowledge/: australia.md  brazil.md  canada.md  egypt.md  france.md  germany.md  india.md  japan.md  mexico.md  nigeria.md  russia.md  south_korea.md
docs/: api-reference.md  canonicalization.md  cli.md  concepts.md  configuration.md  faq.md  getting-questions.md  human-calibration.md  index.md
examples/: END_TO_END_TEST.md  custom_canonicalizer.py  example_config.yaml  example_config_generic.yaml  example_questions.csv  example_questions.json  gsm8k_certification.py  model_comparison.py  quickstart.py  test_config_e2e.yaml  test_questions_120.csv
src/theaios/trustgate/: __init__.py  auto_judge.py  cache.py  calibration.py  certification.py  cli.py  comparison.py  config.py  gate.py  questionnaire.py  sampler.py  sequential.py  serve.py  types.py
src/theaios/trustgate/canonicalize/: __init__.py  code_exec.py  custom.py  embedding.py  llm_judge.py  llm_semantic.py  mcq.py  numeric.py
src/theaios/trustgate/datasets/: __init__.py  gsm8k.py  mmlu.py  truthfulqa.py
src/theaios/trustgate/reporting/: __init__.py  console.py  csv_export.py  json_export.py
src/trustgate/: __init__.py  cache.py  calibration.py  certification.py  cli.py  comparison.py  config.py  sampler.py  sequential.py  serve.py  types.py
src/trustgate/canonicalize/: __init__.py  code_exec.py  custom.py  embedding.py  llm_judge.py  mcq.py  numeric.py
src/trustgate/datasets/: __init__.py  gsm8k.py  mmlu.py  truthfulqa.py
src/trustgate/reporting/: __init__.py  console.py  csv_export.py  json_export.py
tests/: conftest.py  test_cache.py  test_calibrate_flow.py  test_calibration.py  test_certification.py  test_cli.py  test_comparison.py  test_config.py  test_gate.py  test_generic_endpoint.py  test_profile_diagnostic.py  test_questionnaire.py  test_sampler.py  test_sequential.py  test_serve.py
tests/canonicalize/: test_base.py  test_code_exec.py  test_custom.py  test_embedding.py  test_llm_judge.py  test_mcq.py  test_numeric.py
tests/datasets/: test_gsm8k.py  test_mmlu.py  test_truthfulqa.py
tests/integration/: test_e2e_real.py  test_pipeline_mcq.py  test_pipeline_numeric.py
tests/reporting/: test_console.py  test_csv_export.py  test_json_export.py
