[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theaios-trustgate"
version = "0.3.0"
description = "Black-box AI reliability certification via self-consistency sampling and conformal calibration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Charafeddine Mouzouni", email = "charafeddine@cohorte.co" },
]
keywords = ["conformal-prediction", "reliability", "llm-evaluation", "certification", "self-consistency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
serve = ["flask>=3.0"]
judge = ["openai>=1.0"]
embedding = ["sentence-transformers>=3.0", "hdbscan>=0.8"]
all = ["theaios-trustgate[serve,judge,embedding]"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10", "types-pyyaml>=6.0", "pytest-asyncio>=1.0", "respx>=0.22"]

[project.scripts]
trustgate = "theaios.trustgate.cli:main"

[project.urls]
Homepage = "https://github.com/Cohorte-ai/trustgate"
Documentation = "https://cohorte-ai.github.io/trustgate/"
Repository = "https://github.com/Cohorte-ai/trustgate"

[tool.hatch.build.targets.wheel]
packages = ["src/theaios"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
